# cruil

./: .gitignore  Cargo.toml  README.md
cruil/: Cargo.toml
cruil-debug/: Cargo.toml
cruil-debug/src/: main.rs
cruil-godot/: Cargo.toml
cruil-godot-addon/: cruil.gdextension  cruil.gdextension.uid
cruil-godot-example/: device.gd  device.gd.uid  device.tscn  icon.svg.import  keyboard.svg.import  keyboard_mouse_icon_license  main_scene.gd  main_scene.gd.uid  main_scene.tscn  mouse.svg.import  project.godot
cruil-godot-example/addons/: cruil-godot
cruil-godot/src/: cruil.rs  device.rs  event.rs  key.rs  lib.rs
cruil-hid-parser/: Cargo.toml
cruil-hid-parser/src/: lib.rs
cruil-hid-parser/src/bytes/: mod.rs
cruil-hid-parser/src/descriptor/: item.rs  mod.rs  report.rs  usage.rs
cruil-hid-parser/src/descriptor_parser/: item.rs  mod.rs  report.rs  usage.rs
cruil-hid-parser/src/report_parser_generator/: mod.rs
cruil/examples/: player_one.rs
cruil/src/: constants.rs  cruil.rs  device_kind.rs  device_kind_from_info.md  error.rs  input_device.rs  input_reader.rs  input_state.rs  lib.rs  main.rs  readable_device.rs  threaded_reader.rs
cruil/src/backend/: mod.rs
cruil/src/backend/hidapi/: filtered_descriptor.rs  mod.rs
cruil/src/backend/hidapi/keyboard/: device.rs
cruil/src/keyboard/: device.rs  input_state.rs  key_set.rs  keys.rs  mod.rs
cruil/src/mouse/: buttons.rs  device.rs  input_state.rs  mod.rs
src/: device_kind.rs  input_device.rs  input_reader.rs  input_state.rs  main.rs
src/keyboard/: device.rs  input_state.rs
