[package]
name = "raw-input-test"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
hidapi = { version = "2.6.5", default-features = false, features = ["linux-static-libusb", "macos-shared-device", "windows-native"] }
thiserror = "2.0.18"
# rdev = { git = "https://github.com/rustdesk-org/rdev", version = "0.5.0-2" }
