[package]
name = "cruil"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Raw HID input library that can distinguish between different keyboards and mice"
homepage.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
bitflags = "2.11.0"
hidapi = { version = "2.6.5", default-features = false, features = ["linux-static-libusb", "macos-shared-device"] }
hidparser = "1.0.3"
thiserror = "2.0.18"

[features]
debug_logging = []
